crates/plotnik-tests/tests/03-analyze/alternations/mixed_union_first.txt
Q = [
  (a)
  B: (b)
]
------------------ DIAGNOSTICS -------------------
error: cannot mix enum and union branches
 --> query.ptk:2:3
  |
2 |   (a)
  |   ^^^
3 |   B: (b)
  |   - labeled alternative here
  |
help: use all labels for an enum, or none for a merged struct
-------------------- SYMBOLS ---------------------
